# PoseML

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
models/tflite/: io_contract.json
python/poseml/: litert.py  models_manifest.py
python/poseml/convert/: download_models.py  inspect_tflite.py  to_coreml.py
python/poseml/tflite_port/: __init__.py  parser.py  torch_graph.py
python/poseml/verify/: coreml_parity.py  parity.py
python/tests/: test_parity.py
